# AlgTop

./: AlgTop.cabal  LICENSE  README
AlgTop/: SimplicialComplex.hs  SimplicialHomology.hs
Algebra/: SNF_Bezout.hs  SNF_SparseF2.hs
