Name:                AlgTop
Version:             0.1
Cabal-version:       >=1.6
Synopsis:            A library of algebraic topology
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              Anders Mörtberg
Maintainer:          mortberg@chalmers.se
Category:            Math
Build-type:          Simple


Source-repository head
  type: git
  location: git@github.com:mortberg/AlgTop.git

-- Extra-source-files:  

Library
  Exposed-modules:
    AlgTop.SimplicialComplex
  
  Build-depends:       
    base >= 4 && < 5,
    QuickCheck >= 2
